# DeepDetect

./: .gitignore  Dockerfile  README.md  app.py  dvc.yaml  gradio_app.py  main.py  params.yaml  pyproject.toml  requirements.txt  structure.py  tempscript.py
config/: config.yaml
flagged/: log.csv
mlruns/0/: meta.yaml
mlruns/0/1ed3ad49b1164c128c32fa01f41eec0d/: meta.yaml
mlruns/0/1ed3ad49b1164c128c32fa01f41eec0d/metrics/: accuracy  auc  f1  loss  precision  recall
mlruns/0/1ed3ad49b1164c128c32fa01f41eec0d/tags/: mlflow.runName
mlruns/0/2ed8a6d688034b9f9f1ba08fe057de8e/: meta.yaml
mlruns/0/2ed8a6d688034b9f9f1ba08fe057de8e/tags/: mlflow.runName
mlruns/0/5daf35dd52da47e397dd1b6542756b70/: meta.yaml
mlruns/0/5daf35dd52da47e397dd1b6542756b70/tags/: mlflow.runName
mlruns/0/72b00f989b4840bf82ecfc0e320c9dcd/: meta.yaml
mlruns/0/72b00f989b4840bf82ecfc0e320c9dcd/tags/: mlflow.runName
mlruns/0/e082e789b00944eaad0d6e1b4bdf3db3/: meta.yaml
mlruns/0/e082e789b00944eaad0d6e1b4bdf3db3/tags/: mlflow.runName  (+1 more)
mlruns/0/f7dc4bb5075f4c5abb5a768ab5dc367c/: meta.yaml
notebook/: main.ipynb
src/DeepfakeDetection/: __init__.py
src/DeepfakeDetection/components/: data_ingestion.py  data_preprocessing.py  model_evaluation.py  model_training.py
src/DeepfakeDetection/config/: configuration.py
src/DeepfakeDetection/entity/: config_entity.py
src/DeepfakeDetection/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_data_preprocessing.py  stage_03_model_training.py  stage_04_model_evaluation.py
src/DeepfakeDetection/utils/: common.py
(+2 files in other folders)
