[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepfakeDetection"
version = "0.0.0"
description = "Python package to detect Deepfakes using AI"
authors = [
    { name = "Sanskar Modi", email = "sansyprog8@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.urls]
"Bug Tracker" = "https://github.com/sanskarmodi8/DeepDetect/issues"
